Modified console.log function

--- a/Public/index.html
+++ b/Public/index.html
@@ -25,6 +25,7 @@
 	<textarea id="codecontents" name="codecontents" class="codeclass" placeholder="Enter code here"></textarea>
 	<div style="width: 100%; height: 20px; font-size: 14px; margin-top: 10px; margin-bottom: -10px;">
 		<div style="float:right;">
+			<input type="button" name="clearCode" value="Clear" onclick="clearCode()">
 			<input type="button" name="evalCode" value="Execute" onclick="executeCode()">
 		</div>
 		<div style="float:left;">
@@ -33,6 +34,7 @@
 	</div>
 </div>
 <div class="console" id="console">
+Preparing...
 </div>
 </body>
 </html>
